--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -19,6 +19,11 @@ ul > li {
     padding-left: 5px;
 }
 
+.action {
+    padding-left: 5px;
+    font-style: italic;
+}
+
 .on-top {
     position: absolute;
     left: 50px;
