--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -5,48 +5,62 @@ body {
 
 h1 {
     color: #EE3F96;
-}
-
-ul > li {
-    list-style: none;
-}
-
-.nick {
-    font-weight: bold;
-}
-
-.text {
-    padding-left: 5px;
-}
-
-.action {
-    padding-left: 5px;
-    font-style: italic;
-}
-
-.on-top {
-    position: absolute;
-    left: 50px;
-    top: 50px;
-    z-index: 100;
+    font-size: 24px;
+    padding: 0;
+    margin: 0 0 10px 0;
 }
 
 #cr-stage {
     z-index: 1;
 }
 
+#ui {
+    z-index: 2; /* above stage */
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.view {
+}
+
+.login-view {
+    position: relative;
+    margin: 0px auto;
+    top: 40%;
+    width: 400px;
+    padding: 20px;
+
+    background-color: white;
+    border: 2px solid #EE3F96;
+
+    text-align: center;
+}
+
+.login-view form {
+    margin: 0;
+    padding: 0;
+}
+
+.login-view form label {
+    font-weight: bold;
+}
+
 /* FIXME: chatbox styling is broken when set to 100% width */
 
-#chatbox {
+.chat-input-view {
     position: fixed;
     width: 80%;
     bottom: 0px;
     left: 0px;
     padding: 20px;
-    z-index: 2; /* above cr-stage */
 }
 
-#chatbox .text {
-    width: 100%;
+.chat-input-view input[name=text] {
+    width: 80%;
+}
+
+.chat-input-view button[type=submit] {
+    color: red;
 }
 
