--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -58,3 +58,31 @@ h1 {
     width: 80%;
 }
 
+.chat-log-view {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    width: 500px;
+    height: 300px;
+    overflow-y: scroll;
+
+    background-color: lightgrey;
+}
+
+li.chat-log-entry-view {
+    list-style: none;
+}
+
+.chat-log-entry-type-entered  {
+    font-style: italic;    
+}
+
+.chat-log-entry-type-entered .chat-log-entry-nick {
+    font-weight: bold;
+}
+
+.chat-log-entry-type-message .chat-log-entry-nick {
+    font-weight: bold;
+}
+
+
