Validation for messages.

--- a/client/templates/LoginView.html
+++ b/client/templates/LoginView.html
@@ -1,5 +1,5 @@
 <h1>Welcome to ponyverse</h1>
 <form action="#" method="post">
-    <label for="nick">Nick:</label><input name="nick" type="text" />
+    <label for="nick">Nick:</label><input name="nick" type="text" maxlength="<%- constraints.nick.maxlength %>" />
     <button type="submit">Enter</button>
 </form>
