--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -1,6 +1,8 @@
 body {
     margin: 0;
     padding: 0;
+
+    font-size: 12px;
 }
 
 h1 {
@@ -24,6 +26,37 @@ h1 {
 #ui > .spinner { /* the connecting spinner */
     top: 45%;
     left: 50%;
+}
+
+.button,
+button {
+    background-color: white;
+    border: 1px solid #EE3F96;
+
+    height: 22px;
+}
+
+.button .spinner {
+    top: -8px;
+    left: 50%;
+}
+
+.button.loading.disabled {
+    color: white;
+}
+
+input[type=text] {
+    background-color: white;
+    border: 1px solid #EE3F96;
+
+    height: 22px;
+    line-height: 22px;
+}
+
+.button.disabled,
+button:disabled,
+input[type=text]:disabled {
+    color: lightgrey;
 }
 
 .view {
