--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: CelestiaMediumRedux;
+    src: url("/fonts/CelestiaMediumRedux1.55.ttf");
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -6,10 +11,12 @@ body {
 }
 
 h1 {
-    color: #EE3F96;
-    font-size: 24px;
     padding: 0;
     margin: 0 0 10px 0;
+
+    color: #EE3F96;
+    font-size: 28px;
+    font-family: CelestiaMediumRedux, serif; 
 }
 
 #cr-stage {
