--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -11,6 +11,13 @@
         };
     </script>
 
+    <style>
+        @font-face {
+            font-family: CelestiaMediumRedux;
+            src: url("<%= asset('/fonts/CelestiaMediumRedux1.55.ttf') %>");
+        }
+    </style>
+
     <link rel="stylesheet" type="text/css" href="<%= asset('/css/style.css') %>" />
 
     <script src="<%= asset('/js/libs/es5-shim-2.0.4-min.js') %>"></script>
