--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -20,7 +20,7 @@
 
     <link rel="stylesheet" type="text/css" href="<%= asset('/css/style.css') %>" />
 
-    <!-- <script src="<%= asset('/js/libs/es5-shim-2.0.4-min.js') %>"></script> -->
+    <script src="<%= asset('/js/libs/es5-shim-2.0.4-min.js') %>"></script>
     <script src="<%= asset('/js/libs/require-2.1.2-jquery-1.8.3.js') %>"></script>
 
     <script>
