--- a/client/templates/LoginView.html
+++ b/client/templates/LoginView.html
@@ -1,6 +1,10 @@
 <div class="modal">
     <h1>Welcome to ponyverse</h1>
-    <form action="#" method="post">
-        <label for="nick">Nick:</label><input name="nick" type="text" maxlength="<%- constraints.nick.maxlength %>" />
-    </form>
+
+    <a href="#" class="persona-button orange login"><span>Login with Persona</span></a>
+
+    <div>or</div>
+
+    <label for="nick">Nick:</label><input name="nick" type="text" maxlength="<%- constraints.nick.maxlength %>" />
+    <a href="#" class="persona-button orange register"><span>Register a new account</span></a>
 </div>
