--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -19,6 +19,7 @@
     </style>
 
     <link rel="stylesheet" type="text/css" href="<%= asset('/css/style.css') %>" />
+    <link rel="stylesheet" type="text/css" href="<%= asset('/css/persona-buttons.css') %>" />
 
     <script src="<%= asset('/js/libs/es5-shim-2.0.4-min.js') %>"></script>
     <script src="<%= asset('/js/libs/require-2.1.2-jquery-1.8.3.js') %>"></script>
