Added line marking last read message in chat log.

--- a/client/templates/ChatLogEntryView.html
+++ b/client/templates/ChatLogEntryView.html
@@ -12,7 +12,7 @@
         <% break; %>
         
         <% case "message": %>
-            <span class="chat-log-entry-nick">&lt;<%- model.nick %>&gt;</span>
+            <span class="chat-log-entry-nick"><%- model.nick %>:</span>
             <span class="chat-log-entry-text"><%- model.text %></span>
         <% break;
     } %>
