--- a/client/templates/ChatLogEntryView.html
+++ b/client/templates/ChatLogEntryView.html
@@ -2,7 +2,7 @@
     <span class="chat-log-entry-date">[<%- r.time(model.date) %>]</span>
     <% switch(model.type) {
         case "entered": %>
-            <span class="chat-log-entry-nick"><%- model.nick %></span>
+            <span class="chat-log-entry-nick"><%- model.user.getNick() %></span>
             <span class="chat-log-entry-text">just entered the chat...</span>
         <% break; %>
 
