Highlighting of messages.

--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -156,6 +156,10 @@ li.chat-log-entry-view.last-read {
     border-bottom: 1px solid #EE3F96;
 }
 
+li.chat-log-entry-view.highlight {
+    color: #EE3F96;
+}
+
 .chat-log-entry-type-entered,
 .chat-log-entry-type-left {
     font-style: italic;    
