First basic player.

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -39,9 +39,9 @@
     </script>
 </head>
 <body>
-
-<div id="ui"></div>
-
+    <div id="cr-stage">
+        <div id="ui"></div>
+    </div>
 </body>
 </html>
 
