--- a/client/templates/ChatView.html
+++ b/client/templates/ChatView.html
@@ -1,3 +1,6 @@
 <div class="chat-log"></div>
 <div class="chat-input"></div>
 <div class="chat-room-users"></div>
+<div class="chat-actions">
+    <button class="logout-btn">Logout</button>
+</div>
