--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -40,7 +40,11 @@
 </head>
 <body>
     <div id="cr-stage">
-        <div id="ui"></div>
+        <div id="ui">
+        </div>
+
+        <div id="modal">
+        </div>
     </div>
 </body>
 </html>
