Ponyverse has uppercase "p" now.

--- a/client/templates/LoginView.html
+++ b/client/templates/LoginView.html
@@ -1,5 +1,5 @@
 <div class="modal">
-    <h1>Welcome to ponyverse</h1>
+    <h1>Welcome to Ponyverse</h1>
 
     <a href="#" class="persona-button orange login"><span>Login with Persona</span></a>
 
