--- a/client/templates/LoginView.html
+++ b/client/templates/LoginView.html
@@ -1,6 +1,16 @@
 <div class="modal">
     <h1>Welcome to Ponyverse</h1>
 
+    <p>
+        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+        eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
+        voluptua.        
+    </p>
+
+    <p>
+        <a class="rules-link" href="/rules">Please make sure to read the rules first</a>.
+    </p>
+
     <a href="#" class="persona-button orange login"><span>Login with Persona</span></a>
 
     <div>or</div>
