--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -1,24 +1,7 @@
 <html>
 <head>
-    <script>
-        window._asset = function (filename) {
-            "use strict";
+    <%= commonHeaders %>
 
-            var hashes = <%= JSON.stringify(hashes) %>;
-            var hash = hashes[filename];
-
-            return filename + "?v=" + (hash ? hash : new Date().getTime());
-        };
-    </script>
-
-    <style>
-        @font-face {
-            font-family: CelestiaMediumRedux;
-            src: url("<%= asset('/fonts/CelestiaMediumRedux1.55.ttf') %>");
-        }
-    </style>
-
-    <link rel="stylesheet" type="text/css" href="<%= asset('/css/style.css') %>" />
     <link rel="stylesheet" type="text/css" href="<%= asset('/css/persona-buttons.css') %>" />
 
     <script src="<%= asset('/js/libs/es5-shim-2.0.4-min.js') %>"></script>
