Hilight mods and users differently.

--- a/client/templates/ChatRoomUserListItemView.html
+++ b/client/templates/ChatRoomUserListItemView.html
@@ -1,1 +1,1 @@
-<span class="chat-room-user-nick"><%- model.nick %></span>
+<span class="chat-room-user-nick <%- model.role %>"><%- model.nick %></span>
