Fixed and refactored positioning.

--- a/client/templates/ChatView.html
+++ b/client/templates/ChatView.html
@@ -1,6 +1,6 @@
 <div class="chat-log"></div>
 <div class="chat-input"></div>
-<div class="chat-room-users"></div>
+<div class="chat-room-members"></div>
 <div class="chat-actions">
     <button class="logout-btn">Logout</button>
 </div>
