--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -24,6 +24,14 @@ h1 {
     font-family: CelestiaMediumRedux, serif; 
 }
 
+h2 {
+    margin-top: 30px;
+}
+
+h3 {
+    margin-top: 25px;
+}
+
 h3, h4 {
     text-align: left;
 }
@@ -147,6 +155,12 @@ input[type=text]:disabled {
 .static-content li {
     text-align: justify;
 }
+
+.rule-details {
+    margin-top: -30px;
+    padding-top: 20px;
+}
+
 
 .dialog-view .modal,
 .login-view .modal {
