Fixed naming of maxlength and minlength constraints.

--- a/client/templates/LoginView.html
+++ b/client/templates/LoginView.html
@@ -15,6 +15,6 @@
 
     <div>or</div>
 
-    <label for="nick">Nick:</label><input name="nick" type="text" maxlength="<%- constraints.nick.maxlength %>" />
+    <label for="nick">Nick:</label><input name="nick" type="text" maxlength="<%-constraints.nick.maxLength %>" />
     <a href="#" class="persona-button orange register"><span>Register a new account</span></a>
 </div>
