--- a/client/templates/ChatInputView.html
+++ b/client/templates/ChatInputView.html
@@ -1,4 +1,4 @@
 <form action="#" method="post">
-    <input name="text" type="text" autocomplete="off" maxlength="<%- constraints.text.maxlength %>" />
+    <input name="text" type="text" autocomplete="off" maxlength="<%- constraints.text.maxLength %>" />
     <button type="submit">Send</button>
 </form>
