Some styling adjustments.

--- a/client/templates/ChatLogEntryView.html
+++ b/client/templates/ChatLogEntryView.html
@@ -12,7 +12,7 @@
         <% break; %>
         
         <% case "message": %>
-            <span class="chat-log-entry-nick <%- model.user.getRole().getName() %>"><%- model.user.getNick() %></span>
+            <span class="chat-log-entry-nick <%- model.user.getRole().getName() %>"><%- model.user.getNick() %></span>:
             <span class="chat-log-entry-text"><%- model.text %></span>
         <% break; %>
 
