--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -47,6 +47,19 @@ body {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#dbf4f1', endColorstr='#b5e7e4',GradientType=0 );
 }
 
+button, input {
+    font-size: 14px;
+}
+
+button {
+    cursor: pointer;
+}
+
+input {
+    padding: 0;
+    margin: 0;
+}
+
 h1 {
     padding: 0;
     margin: 0 0 10px 0;
@@ -196,7 +209,7 @@ input[type=text]:disabled {
 
 .dialog-view .modal,
 .login-view .modal {
-    width: 400px;
+    width: 450px;
 }
 
 .login-view .rules-link {
@@ -287,7 +300,7 @@ li.chat-log-entry-view.last-read {
 }
 
 li.chat-log-entry-view.highlight {
-    color: #EE3F96;
+    color: #C60070;
 }
 
 .chat-log-entry-date {
@@ -299,7 +312,11 @@ li.chat-log-entry-view.highlight {
     font-style: italic;
 }
 
-.chat-log-entry-view .chat-log-entry-nick,
+.chat-log-entry-view .chat-log-entry-nick {
+    font-weight: bold;
+}
+
+.chat-log-entry-view .chat-log-entry-nick.moderator:after,
 .chat-room-members-list-item-view .chat-room-member-nick {
     font-weight: bold;
     color: white;
@@ -311,15 +328,22 @@ li.chat-log-entry-view.highlight {
     padding: 0px 4px;
 }
 
-.chat-log-entry-view .chat-log-entry-nick.moderator,
+.chat-log-entry-view .chat-log-entry-nick.moderator:after,
 .chat-room-members-list-item-view .chat-room-member-nick.moderator {
     background-color: #E3B214;
 }
 
-.chat-log-entry-view  .chat-log-entry-nick.moderator:after,
+.chat-log-entry-view  .chat-log-entry-nick.moderator:after {
+    font-size: 12px;
+    content: "mod";
+    margin-left: 3px;
+    padding: 0px 3px;
+}
+
 .chat-room-members-list-item-view .chat-room-member-nick.moderator:after {
     font-size: 12px;
-    content: "\00a0(mod)";
+    content: "(mod)";
+    margin-left: 3px;
 }
 
 .chat-log-entry-type-system-out .chat-log-entry-message,
