--- a/server/templates/credits.html
+++ b/server/templates/credits.html
@@ -25,6 +25,7 @@
 
         <%
             var sectionNames = {
+                ponyverse: "Ponyverse",
                 font: "Fonts",
                 css: "Stylesheets",
                 avatar: "Avatars",
