Started major ui redesign. Added screen border.

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -23,6 +23,15 @@
     </script>
 </head>
 <body>
+    <div id="border_top"></div>
+    <div id="border_bottom"></div>
+    <div id="border_left"></div>
+    <div id="border_right"></div>
+    <div id="border_corner_top_left"></div>
+    <div id="border_corner_top_right"></div>
+    <div id="border_corner_bottom_left"></div>
+    <div id="border_corner_bottom_right"></div>
+
     <div id="cr-stage">
         <div id="ui">
         </div>
