--- a/client/templates/ChatView.html
+++ b/client/templates/ChatView.html
@@ -1,7 +1,12 @@
-<div class="chat-log"></div>
-<div class="chat-input"></div>
-<div class="chat-room-members"></div>
-<div class="avatar-selector"></div>
+<div class="chat">
+    <div class="chat-log"></div>
+    <div class="chat-input"></div>
+</div>
+
+<!-- <div class="chat-room-members"></div> -->
+<!-- <div class="avatar-selector"></div> -->
+<!--
 <div class="chat-actions">
     <button class="logout-btn">Logout</button>
 </div>
+-->
