--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -23,14 +23,14 @@
     </script>
 </head>
 <body>
-    <div id="border_top"></div>
-    <div id="border_bottom"></div>
-    <div id="border_left"></div>
-    <div id="border_right"></div>
-    <div id="border_corner_top_left"></div>
-    <div id="border_corner_top_right"></div>
-    <div id="border_corner_bottom_left"></div>
-    <div id="border_corner_bottom_right"></div>
+    <div class="horizontal-screen-border top"></div>
+    <div class="horizontal-screen-border bottom"></div>
+    <div class="vertical-screen-border left"></div>
+    <div class="vertical-screen-border right"></div>
+    <div class="screen-border-corner sprite top-left"></div>
+    <div class="screen-border-corner sprite top-right"></div>
+    <div class="screen-border-corner sprite bottom-left"></div>
+    <div class="screen-border-corner sprite bottom-right"></div>
 
     <div id="cr-stage">
         <div id="ui">
